Fix borderless dropdown alignment for Safari

--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -369,9 +369,12 @@ a {
 
       span {
         .sl-sb;
+        line-height: 28px;
         color: @gray6;
         padding: 0 2px;
         max-width: none;
+        display:inline-block;
+        vertical-align: top;
       }
 
       .caret {
